rollout/apidemo-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: apidemo
  labels:
    app: apidemo
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: apidemo
  template:
    metadata:
      labels:
        app: apidemo
    spec:
      containers:
      - name: apidemo
        image: jeraydiaz/apidemo:v1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 15m
  strategy:
    blueGreen:
      autoPromotionEnabled: false
      activeService: apidemo
      previewService: apidemo-preview
