rollout/apidemo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apidemo
spec:
  ingressClassName: nginx
  rules:
    - host: apidemo.dev.caruso.systems
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apidemo
                port:
                  number: 80
