rollout/apidemo-preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apidemo-preview
spec:
  ingressClassName: nginx
  rules:
    - host: apidemo-preview.dev.caruso.systems
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apidemo-preview
                port:
                  number: 80
